--- a/src/gridstack.scss
+++ b/src/gridstack.scss
@@ -1,7 +1,7 @@
-$gridstack-columns: 12 !default;
-$horizontal_padding: 20px !default;
-$vertical_padding: 20px !default;
-$animation_speed: .3s !default;
+$gridstack-columns: 72 !default;
+$horizontal_padding: 16px !default;
+$vertical_padding: 16px !default;
+$animation_speed: .22s !default;
 
 @mixin vendor($property, $value...){
     -webkit-#{$property}:$value;
@@ -114,7 +114,8 @@ $animation_speed: .3s !default;
     }
 
     &.grid-stack-animate,
-    &.grid-stack-animate .grid-stack-item {
+    &.grid-stack-animate .grid-stack-item,
+    &.grid-stack-animate .grid-stack-widget {
         @include vendor(transition, left $animation_speed, top $animation_speed, height $animation_speed, width $animation_speed);
     }
 
@@ -123,18 +124,18 @@ $animation_speed: .3s !default;
     &.grid-stack-animate .grid-stack-item.grid-stack-placeholder{
         @include vendor(transition, left .0s, top .0s, height .0s, width .0s);
     }
-    
-	&.grid-stack-one-column-mode {
-		height: auto !important;
-		&> .grid-stack-item {
-	        position: relative !important;
-	        width: auto !important;
-	        left: 0 !important;
-	        top: auto !important;
-	        margin-bottom: $vertical_padding;
-	        max-width: none !important;
+}
 
-	        &> .ui-resizable-handle { display: none; }
-		}
-	}
+@media (max-width: 960px) {
+    .grid-stack-item {
+        position: relative !important;
+        width: auto !important;
+        left: 0 !important;
+        top: auto !important;
+        margin-bottom: $vertical_padding;
+
+        .ui-resizable-handle { display: none; }
+    }
+
+    .grid-stack { height: auto !important; }
 }
